# Royal_divine_chatbot_v1

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml  requirements.txt
api/: routes.py
app/: business_context.py  cleaner.py  config.py  contact_extractor.py  conversation_logger.py  customer_memory.py  embeddings.py  google_logger.py  guardrails.py  lead_detector.py  lead_logger.py  lead_memory.py  llm.py  loader.py  memory.py  metadata.py  moq_checker.py  product_detector.py  products.py  prompts.py  query_router.py  rag_service.py  splitter.py  vector_store.py
static/: app.js  index.html  style.css
